avoid endless download request dialogs for GraphHopper PBFs in an endless loop